--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,10 @@
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }],
-    "routers": [{
-        "src": "/(.*)",
-        "dest": "elevate/wsgi.py"
-    }]
+  "routers": [
+    {
+      "src": "/(.*)",
+      "dest": "analoguearchive/wsgi.py"
+    }
+  ]
 }
